Add power mechanics: implement power generation, storage, and consumption mechanics, along with related structures and configurations